--- a/css/page-structure.css
+++ b/css/page-structure.css
@@ -7,13 +7,32 @@ body {
   grid-template-columns: 250px 1fr 200px;
   grid-template-rows: 200px 1fr 150px;
 
+  grid-template-areas:
+    'header header header'
+    'nav main aside'
+    'footer footer footer';
+
   min-height: 100vh;
 }
 
-header,
+header {
+  grid-area: header;
+}
+
+nav {
+  grid-area: nav;
+}
+
+main {
+  grid-area: main;
+}
+
+aside {
+  grid-area: aside;
+}
+
 footer {
-  grid-column-start: 1;
-  grid-column-end: 4;
+  grid-area: footer;
 }
 
 body > * {
@@ -25,10 +44,12 @@ body > * {
   body {
     grid-template-columns: 1fr;
     grid-template-rows: 200px auto auto auto 150px;
-  }
-  header,
-  footer {
-    grid-column-start: 1;
-    grid-column-end: 2;
+
+    grid-template-areas:
+      'header'
+      'nav'
+      'main'
+      'aside'
+      'footer';
   }
 }
