--- a/css/page-structure.css
+++ b/css/page-structure.css
@@ -4,13 +4,13 @@
 
 body {
   display: grid;
-  grid-template-columns: 250px 1fr 200px;
+  grid-template-columns: 1fr 250px minmax(auto, 550px) 200px 1fr;
   grid-template-rows: 200px 1fr 150px;
 
   grid-template-areas:
-    'header header header'
-    'nav main aside'
-    'footer footer footer';
+    'header header header header header'
+    '. nav main aside .'
+    'footer footer footer footer footer';
 
   min-height: 100vh;
 }
